# fango

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  request.py
api/: users.py
core/: main.py  settings.py
core/models/: user.py
fango/: admin.py  auth.py  depends.py  filters.py  generics.py  log.py  logging.py  models.py  pagination.py  permissions.py  request.py  routing.py  schemas.py  utils.py  viewset.py  viewsets.py
fango/adapters/: pydantic.py  types.py
fango/auth/: middlewares.py  repositories.py  schemas.py  views.py
fango/middleware/: common.py
fango/paginator/: cursor.py  schemas.py  utils.py
fango/tests/: client.py  fixtures.py
